# x-lang

./: .bazelignore  .bazelrc  .gitignore  42.x  AGENTS.md  BAZEL_MIGRATION_GUIDE.md  BUILD.bazel  C23_BACKEND.md  CHANGES_SUMMARY.md  CLAUDE.md  COMPILER_ARCHITECTURE.md  Cargo.toml  DESIGN_GOALS.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SETUP_GUIDE.md  FIX_BAZEL.md  IMPLEMENTATION_STATUS.md  LICENSE-APACHE  LICENSE-BSD-3-CLAUSE  LICENSE-MIT  LICENSES.md  MODULE.bazel  MULTI_BACKEND_IMPLEMENTATION.md  MULTI_BACKEND_PLAN.md  PLAN.md  Program.cs  README.md  RUN_HELLO.md  SPEC.md  STATUS.md  SUCCESS_SUMMARY.md  TODO.md  TODO_COMPILER_PIPELINE.md  TYPE_SYSTEM.md  VERIFICATION.md  X_TO_C_COMPILATION_SPEC.md  ZEN.md  build_all.ps1  build_release.ps1  build_simple.bat  (+67 more)
compiler/: AGENTS.md  CLAUDE.md  Cargo.toml  RESTRUCTURE.md  libx_mir-a847ba9ac4fbf5a5.rmeta  test_lex.rs  test_obj-a847ba9ac4fbf5a5.d
compiler/.claude/: ralph-loop.local.md
compiler/x-codegen/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-codegen-asm/: AGENTS.md  CLAUDE.md  Cargo.toml
compiler/x-codegen-asm/src/: arch.rs  emitter.rs  encoding.rs  lib.rs
compiler/x-codegen-csharp/: AGENTS.md  CLAUDE.md  TASK.md  TODO.md
compiler/x-codegen-csharp/src/: lib.rs
compiler/x-codegen-dotnet/: BUILD.bazel  Cargo.toml  TODO.md
compiler/x-codegen-dotnet/src/: lib.rs
compiler/x-codegen-erlang/: AGENTS.md  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-codegen-erlang/src/: lib.rs
compiler/x-codegen-go/: Cargo.toml
compiler/x-codegen-go/src/: lib.rs
compiler/x-codegen-java/: AGENTS.md  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-codegen-java/src/: lib.rs
compiler/x-codegen-js/: BUILD.bazel  Cargo.toml  TODO.md
compiler/x-codegen-js/src/: lib.rs
compiler/x-codegen-jvm/: BUILD.bazel  Cargo.toml  TODO.md
compiler/x-codegen-jvm/src/: lib.rs
compiler/x-codegen-llvm/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-codegen-llvm/src/: lib.rs
compiler/x-codegen-native/: Cargo.toml  TASK.md  TODO.md
compiler/x-codegen-native/src/: emitter.rs  lib.rs
compiler/x-codegen-python/: AGENTS.md  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-codegen-python/src/: lib.rs
compiler/x-codegen-rust/: AGENTS.md  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-codegen-rust/src/: lib.rs
compiler/x-codegen-swift/: AGENTS.md  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-codegen-swift/src/: lib.rs
compiler/x-codegen-typescript/: AGENTS.md  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-codegen-typescript/src/: lib.rs
compiler/x-codegen-wasm/: Cargo.toml
compiler/x-codegen-wasm/src/: lib.rs
compiler/x-codegen-zig/: AGENTS.md  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-codegen-zig/src/: generated_part.rs  lib.rs
compiler/x-codegen/runtime/: x_runtime.h
compiler/x-codegen/src/: c_backend.rs  compile_with_zig.rs  constants.rs  csharp_backend.rs  error.rs  java_backend.rs  lib.rs  lir_to_ast.rs  llvm_lower.rs  lower.rs  python_backend.rs  rust_backend.rs  target.rs  test_all_backends.rs  typescript_backend.rs  xir.rs  zig_backend.rs
compiler/x-hir/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-hir/src/: constant_folding.rs  lib.rs
compiler/x-interpreter/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-interpreter/src/: lib.rs
compiler/x-lexer/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  TASK.md  TODO.md  test_unicode.rs
compiler/x-lexer/src/: errors.rs  lib.rs  new_next_char.rs  span.rs  tmp  token.rs
compiler/x-lir/: AGENTS.md  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-lir/src/: lib.rs  lower.rs  peephole.rs
compiler/x-mir/: AGENTS.md  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-mir/src/: cfg.rs  const_prop.rs  dataflow.rs  dead_code.rs  lib.rs  lower.rs  mir.rs  perceus.pre_migration_backup.rs  perceus.rs
compiler/x-parser/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  TASK.md  TODO.md
compiler/x-parser/src/: ast.rs  errors.rs  lib.rs  module_resolver.rs  parser.rs
compiler/x-perceus/: BUILD.bazel  Cargo.toml  TODO.md
compiler/x-perceus/src/: lib.rs
compiler/x-test-integration/: AGENTS.md
compiler/x-test-integration/src/: lib.rs
compiler/x-test-integration/tests/: backends.rs
compiler/x-typechecker/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  TASK.md  TODO.md  test_alias.rs
compiler/x-typechecker/src/: errors.rs  exhaustiveness.rs  format.rs  inference.rs  lib.rs  lib.rs_resolve_type.txt
crates/x-codegen-llvm/: Cargo.toml
crates/x-codegen-llvm/src/: lower.rs
spec/x-spec/: BUILD.bazel  Cargo.toml
spec/x-spec/cases/: lexical_basic.toml
spec/x-spec/src/: main.rs
tools/: CLAUDE.md  Cargo.toml
tools/x-cli/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  TASK.md  TODO.md  hello.zig  test_for.x  test_for2.x  test_for3.x  test_for4.x  test_func.x  test_func2.x  test_func3.x  test_func4.x  test_func_type.x  test_generic.x  test_generic2.x  test_if.x  test_mut.x  test_mut2.x  test_nested.x  test_nested2.x  test_nested3.x  test_nested4.x  test_prelude_source.x  test_println.x  test_runtime.zig  test_simple.x
tools/x-cli/.claude/: ralph-loop.local.md
tools/x-cli/src/: config.rs  lockfile.rs  main.rs  manifest.rs  pipeline.rs  project.rs  registry.rs  resolver.rs  utils.rs
tools/x-cli/tests/: examples.rs
tools/x-lang-vscode/: .gitignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
tools/x-lang-vscode/lib/: lsp-worker.js  x-lsp.d.ts  x-lsp.js
tools/x-lang-vscode/src/: extension.ts
tools/x-lang-vscode/syntaxes/: x.tmLanguage.json
tools/x-lsp/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
tools/x-lsp/src/: constants.rs  main.rs  server.rs  utils.rs
tools/x-lsp/wasm_pkg/: x-lsp_bg.wasm  x-lsp_bg.wasm.d.ts
tools/x-syntax-gen/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
tools/x-syntax-gen/output/: x.tmLanguage.json
tools/x-syntax-gen/src/: main.rs  model.rs  token_mapping.rs  utils.rs
tools/x-syntax-gen/templates/: vim.vim.hbs  (+1 more)
(+648 files in other folders)
