"""
X-Lang 根 BUILD 文件
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_binary", "rust_test")

# ========================================
# 包组定义
# ========================================

package_group(
    name = "internal",
    packages = [
        "//compiler/...",
        "//library/...",
        "//tools/...",
        "//spec/...",
    ],
)

package_group(
    name = "external",
    packages = ["//..."],
)

# ========================================
# 文件组
# ========================================

exports_files([
    "Cargo.toml",
    "Cargo.lock",
    ".bazelrc",
    "README.md",
])

# ========================================
# 别名目标
# ========================================

alias(
    name = "x",
    actual = "//tools/x-cli:x",
    visibility = ["//visibility:public"],
)

alias(
    name = "all",
    actual = ":all_crates",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_crates",
    srcs = [
        "//compiler/x-lexer",
        "//compiler/x-parser",
        "//compiler/x-typechecker",
        "//compiler/x-hir",
        "//compiler/x-perceus",
        "//compiler/x-codegen",
        "//compiler/x-codegen-llvm",
        "//compiler/x-codegen-js",
        "//compiler/x-codegen-jvm",
        "//compiler/x-codegen-dotnet",
        "//compiler/x-interpreter",
        "//library/x-stdlib",
        "//spec/x-spec",
        "//tools/x-cli",
    ],
    visibility = ["//visibility:public"],
)

# ========================================
# 测试套件
# ========================================

test_suite(
    name = "tests",
    tests = [
        "//compiler/x-lexer:tests",
        "//compiler/x-parser:tests",
        "//compiler/x-typechecker:tests",
        "//compiler/x-hir:tests",
        "//compiler/x-perceus:tests",
        "//compiler/x-codegen:tests",
        "//compiler/x-codegen-llvm:tests",
        "//compiler/x-codegen-js:tests",
        "//compiler/x-codegen-jvm:tests",
        "//compiler/x-codegen-dotnet:tests",
        "//compiler/x-interpreter:tests",
        "//library/x-stdlib:tests",
        "//spec/x-spec:tests",
        "//tools/x-cli:tests",
    ],
    visibility = ["//visibility:public"],
)
