[workspace]
resolver = "2"
members = [
    "compiler/x-lexer",
    "compiler/x-parser",
    "compiler/x-typechecker",
    "compiler/x-hir",
    "compiler/x-perceus",
    "compiler/x-codegen",
    "compiler/x-codegen-llvm",
    "compiler/x-codegen-js",
    "compiler/x-codegen-jvm",
    "compiler/x-codegen-dotnet",
    "compiler/x-interpreter",
    "library/x-stdlib",
    "spec/x-spec",
]

[workspace.dependencies]
# 内部 crates
x-lexer = { path = "compiler/x-lexer" }
x-parser = { path = "compiler/x-parser" }
x-typechecker = { path = "compiler/x-typechecker" }
x-hir = { path = "compiler/x-hir" }
x-perceus = { path = "compiler/x-perceus" }
x-codegen = { path = "compiler/x-codegen" }
x-interpreter = { path = "compiler/x-interpreter" }
x-stdlib = { path = "library/x-stdlib" }

# 常用依赖
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# 解析和生成相关依赖
logos = "0.13"
lalrpop = "0.20"
lalrpop-util = "0.20"

# 类型检查相关依赖
im = "15.1"

# 代码生成相关依赖（需本机安装对应 LLVM 版本，如 LLVM 21）
inkwell = { version = "0.8", features = ["llvm21-1"] }
wasm-bindgen = "0.2"
wasmtime = "11.0"

# CLI相关依赖
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# 异步和并发相关依赖
tokio = { version = "1.35", features = ["full"] }

[patch.crates-io]
# Windows 官方 LLVM 安装包不含 llvm-config.exe；使用本仓库内补丁版 llvm-sys，
# 在设置 LLVM_SYS_211_PREFIX 时根据 include/lib 直接配置，不依赖 llvm-config。
llvm-sys = { path = "vendor/llvm-sys" }
