"""
X-Lang Bazel Module (Bzlmod)
"""

module(
    name = "x_lang",
    version = "0.1.0",
    compatibility_level = 1,
)

# rules_rust - 使用与 Bazel 9.0+ 兼容的版本
bazel_dep(name = "rules_rust", version = "0.63.0")

# Toolchains
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.75.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Crate universe
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates_io",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//compiler/x-lexer:Cargo.toml",
        "//compiler/x-parser:Cargo.toml",
        "//compiler/x-typechecker:Cargo.toml",
        "//compiler/x-hir:Cargo.toml",
        "//compiler/x-perceus:Cargo.toml",
        "//compiler/x-codegen:Cargo.toml",
        "//compiler/x-codegen-llvm:Cargo.toml",
        "//compiler/x-codegen-js:Cargo.toml",
        "//compiler/x-codegen-jvm:Cargo.toml",
        "//compiler/x-codegen-dotnet:Cargo.toml",
        "//compiler/x-interpreter:Cargo.toml",
        "//library/x-stdlib:Cargo.toml",
        "//spec/x-spec:Cargo.toml",
        "//tools/x-cli:Cargo.toml",
    ],
)
use_repo(crate, "crates_io")
