[workspace]
resolver = "2"
members = [
    # 前端
    "x-lexer",
    "x-parser",
    "x-typechecker",
    # 中端
    "x-hir",
    "x-mir",        # 新增：中层 IR + Perceus
    "x-lir",        # 新增：低层 IR (= XIR)
    # 后端
    "x-codegen",
    "x-codegen-js",
    "x-codegen-jvm",
    "x-codegen-dotnet",
    # 其他
    "x-interpreter",
    # 待删除
    "x-codegen-wasm", # Wasm 由 Zig 后端支持，待删除
]

[workspace.dependencies]
# 内部 crates
x-lexer = { path = "x-lexer" }
x-parser = { path = "x-parser" }
x-typechecker = { path = "x-typechecker" }
x-hir = { path = "x-hir" }
x-mir = { path = "x-mir" }
x-lir = { path = "x-lir" }
x-codegen = { path = "x-codegen" }
x-interpreter = { path = "x-interpreter" }

# 常用依赖
thiserror = "1.0"
log = "0.4"
im = "15.1"
lalrpop = "0.20"
lalrpop-util = "0.20"
tokio = { version = "1.35", features = ["full"] }
