[workspace]
resolver = "2"
members = [
    # 前端
    "x-lexer",
    "x-parser",
    "x-typechecker",
    # 中端
    "x-hir",
    "x-mir",        # 中层 IR + Perceus
    "x-lir",        # 低层 IR (= XIR)
    # 后端核心
    "x-codegen",
    # 十大后端
    "x-codegen-zig",        # 1. Zig 后端 - Native/Wasm
    "x-codegen-typescript", # 2. TypeScript 后端 - 浏览器/Node.js/Deno
    "x-codegen-python",     # 3. Python 后端 - Python 源码
    "x-codegen-rust",       # 4. Rust 后端 - Rust 源码
    "x-codegen-jvm",        # 5. JVM 后端 - Java 字节码
    "x-codegen-dotnet",     # 6. .NET 后端 - C# 源码/CIL
    "x-codegen-llvm",       # 7. LLVM 后端 - LLVM IR
    "x-codegen-swift",      # 8. Swift 后端 - Apple 生态
    "x-codegen-go",         # 9. Go 后端 - 云原生/网络编程
    "x-codegen-native",     # 10. Native 后端 - LIR 直译机器码
    # 其他
    "x-interpreter",
]

[workspace.dependencies]
# 内部 crates
x-lexer = { path = "x-lexer" }
x-parser = { path = "x-parser" }
x-typechecker = { path = "x-typechecker" }
x-hir = { path = "x-hir" }
x-mir = { path = "x-mir" }
x-lir = { path = "x-lir" }
x-codegen = { path = "x-codegen" }
x-interpreter = { path = "x-interpreter" }

# 常用依赖
thiserror = "1.0"
log = "0.4"
im = "15.1"
lalrpop = "0.20"
lalrpop-util = "0.20"
tokio = { version = "1.35", features = ["full"] }
