[workspace]
resolver = "2"
members = [
    # 前端
    "x-lexer",
    "x-parser",
    "x-typechecker",
    # 中端
    "x-hir",
    "x-mir",        # 中层 IR + Perceus
    "x-lir",        # 低层 IR (= XIR)
    # 后端核心
    "x-codegen",
    # 十大后端
    "x-codegen-zig",        # 1. Zig 后端 - Native/Wasm
    "x-codegen-typescript", # 2. TypeScript 后端 - 浏览器/Node.js/Deno
    "x-codegen-python",     # 3. Python 后端 - Python 源码
    "x-codegen-rust",       # 4. Rust 后端 - Rust 源码
    "x-codegen-java",       # 5. Java 后端 - Java 源码
    "x-codegen-csharp",     # 6. C# 后端 - .NET 平台
    "x-codegen-llvm",       # 7. LLVM 后端 - LLVM IR
    "x-codegen-swift",      # 8. Swift 后端 - Apple 生态
    "x-codegen-erlang",     # 9. Erlang 后端 - 并发/分布式系统
    "x-codegen-asm",        # 10. ASM 后端 - LIR 直译汇编
    # 其他
    "x-interpreter",
]

[workspace.dependencies]
# 内部 crates
x-lexer = { path = "x-lexer" }
x-parser = { path = "x-parser" }
x-typechecker = { path = "x-typechecker" }
x-hir = { path = "x-hir" }
x-mir = { path = "x-mir" }
x-lir = { path = "x-lir" }
x-codegen = { path = "x-codegen" }
x-codegen-asm = { path = "x-codegen-asm" }
x-interpreter = { path = "x-interpreter" }

# 常用依赖
thiserror = "1.0"
log = "0.4"
im = "15.1"
lalrpop = "0.20"
lalrpop-util = "0.20"
tokio = { version = "1.35", features = ["full"] }
