"""
x-codegen-js - X 语言 JavaScript 代码生成后端
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//:internal"])

rust_library(
    name = "x_codegen_js",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_codegen_js",
    edition = "2021",
    deps = [
        "//compiler/x-parser",
        "//compiler/x-codegen",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_codegen_js_tests",
    edition = "2021",
    deps = [
        ":x_codegen_js",
        "//compiler/x-parser",
        "//compiler/x-codegen",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
)
