"""
x-codegen-jvm - X 语言 JVM 代码生成后端
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//:internal"])

rust_library(
    name = "x_codegen_jvm",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_codegen_jvm",
    edition = "2021",
    deps = [
        "//compiler/x-parser",
        "//compiler/x-codegen",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_codegen_jvm_tests",
    edition = "2021",
    deps = [
        ":x_codegen_jvm",
        "//compiler/x-parser",
        "//compiler/x-codegen",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
)
