"""
x-codegen-llvm - X 语言 LLVM 代码生成后端
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//:internal"])

rust_library(
    name = "x_codegen_llvm",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_codegen_llvm",
    edition = "2021",
    deps = [
        "//compiler/x-parser",
        "//compiler/x-codegen",
        "@crates_io//:inkwell",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_codegen_llvm_tests",
    edition = "2021",
    deps = [
        ":x_codegen_llvm",
        "//compiler/x-parser",
        "//compiler/x-codegen",
        "@crates_io//:inkwell",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
)
