[package]
name = "x-codegen-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
x-parser = { workspace = true }
x-codegen = { workspace = true }
inkwell = { version = "0.8", default-features = false, features = ["llvm21-1", "target-x86"] }
thiserror = { workspace = true }
log = { workspace = true }
