[package]
name = "x-codegen-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
x-codegen = { path = "../x-codegen" }
x-lexer = { path = "../x-lexer" }
x-parser = { path = "../x-parser" }
x-typechecker = { path = "../x-typechecker" }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
