[package]
name = "x-codegen-zig"
version = "0.1.0"
edition = "2021"
description = "X语言 Zig 后端 - 通过 Zig 编译器生成 Native/Wasm"

[dependencies]
x-parser = { workspace = true }
x-hir = { workspace = true }
x-mir = { workspace = true }
x-lir = { workspace = true }
x-codegen = { path = "../x-codegen" }
thiserror = { workspace = true }
log = { workspace = true }
