"""
x-codegen - X 语言代码生成器
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//:internal"])

rust_library(
    name = "x_codegen",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_codegen",
    edition = "2021",
    deps = [
        "//compiler/x-parser",
        "//compiler/x-perceus",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
    # Optional LLVM features
    crate_features = [
        # "llvm",  # Uncomment to enable LLVM codegen (requires LLVM 21)
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_codegen_tests",
    edition = "2021",
    deps = [
        ":x_codegen",
        "//compiler/x-parser",
        "//compiler/x-perceus",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
)
