[package]
name = "x-codegen"
version = "0.1.0"
edition = "2021"
description = "X语言代码生成器"
license = "MIT"

[dependencies]
x-parser = { workspace = true }
x-perceus = { workspace = true }

# LLVM 绑定 - 使用 LLVM 21（需本机安装 LLVM 21）
# 若 LLVM 在非标准路径，请设置环境变量 LLVM_SYS_211_PREFIX 指向安装目录
inkwell = { version = "0.8", default-features = false, features = ["llvm21-1", "target-x86"] }

# WebAssembly 支持
wasm-bindgen = "0.2"
wasmtime = "11.0"

# 不可变数据结构
im = "15.1"

# 错误处理
thiserror = "1.0"

# 日志
log = "0.4"