[package]
name = "x-codegen"
version = "0.1.0"
edition = "2021"
description = "X语言代码生成器"
license = "MIT"

[features]
default = []
llvm = ["inkwell"]

[dependencies]
x-parser = { workspace = true }
x-perceus = { workspace = true }

# LLVM 绑定 - 可选依赖，需本机安装 LLVM 21
inkwell = { version = "0.8", default-features = false, features = ["llvm21-1", "target-x86"], optional = true }

# 错误处理
thiserror = "1.0"

# 日志
log = "0.4"