[package]
name = "x-codegen"
version = "0.1.0"
edition = "2021"
description = "X语言代码生成器"
license = "MIT"

[features]
default = []

[dependencies]
x-parser = { workspace = true }
x-perceus = { workspace = true }


# 错误处理
thiserror = "1.0"

# 日志
log = "0.4"


[[bin]]
name = "compile_with_zig"
path = "src/compile_with_zig.rs"

[[bin]]
name = "test_all_backends"
path = "src/test_all_backends.rs"