"""
x-hir - X 语言高级中间表示
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//:internal"])

rust_library(
    name = "x_hir",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_hir",
    edition = "2021",
    deps = [
        "//compiler/x-parser",
        "//compiler/x-typechecker",
        "@crates_io//:im",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_hir_tests",
    edition = "2021",
    deps = [
        ":x_hir",
        "//compiler/x-parser",
        "//compiler/x-typechecker",
        "@crates_io//:im",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
)
