[package]
name = "x-hir"
version = "0.1.0"
edition = "2021"
description = "X语言高级中间表示"
license = "MIT"

[dependencies]
# 依赖其他crates
x-parser = { workspace = true }
x-typechecker = { workspace = true }
# 注意：x-perceus 依赖 x-hir，因此 x-hir 不能依赖 x-perceus
# 所有权注解功能应移到 x-perceus 或其他模块中

# 不可变数据结构
im = "15.1"

# 错误处理
thiserror = "1.0"

# 日志
log = "0.4"