"""
x-interpreter - X 语言解释器
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//:internal"])

rust_library(
    name = "x_interpreter",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_interpreter",
    edition = "2021",
    deps = [
        "//compiler/x-parser",
        "//compiler/x-perceus",
        "@crates_io//:im",
        "@crates_io//:tokio",
        "@crates_io//:num_bigint",
        "@crates_io//:num_traits",
        "@crates_io//:num_integer",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_interpreter_tests",
    edition = "2021",
    deps = [
        ":x_interpreter",
        "//compiler/x-parser",
        "//compiler/x-perceus",
        "@crates_io//:im",
        "@crates_io//:tokio",
        "@crates_io//:num_bigint",
        "@crates_io//:num_traits",
        "@crates_io//:num_integer",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
)
