"""
x-lexer - X 语言词法分析器
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//:internal"])

rust_library(
    name = "x_lexer",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_lexer",
    edition = "2021",
    deps = [
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
    visibility = ["//visibility:public"],
)

# 测试 (如果有)
rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_lexer_tests",
    edition = "2021",
    deps = [
        ":x_lexer",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
)
