"""
x-parser - X 语言语法分析器
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//:internal"])

rust_library(
    name = "x_parser",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_parser",
    edition = "2021",
    deps = [
        "//compiler/x-lexer",
        "@crates_io//:lalrpop",
        "@crates_io//:lalrpop_util",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_parser_tests",
    edition = "2021",
    deps = [
        ":x_parser",
        "//compiler/x-lexer",
        "@crates_io//:lalrpop",
        "@crates_io//:lalrpop_util",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
)
