"""
x-perceus - X 语言 Perceus 内存管理
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//:internal"])

rust_library(
    name = "x_perceus",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_perceus",
    edition = "2021",
    deps = [
        "//compiler/x-hir",
        "@crates_io//:im",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_perceus_tests",
    edition = "2021",
    deps = [
        ":x_perceus",
        "//compiler/x-hir",
        "@crates_io//:im",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
)
