"""
x-typechecker - X 语言类型检查器
"""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//:internal"])

rust_library(
    name = "x_typechecker",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_typechecker",
    edition = "2021",
    deps = [
        "//compiler/x-parser",
        "@crates_io//:im",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_typechecker_tests",
    edition = "2021",
    deps = [
        ":x_typechecker",
        "//compiler/x-parser",
        "@crates_io//:im",
        "@crates_io//:thiserror",
        "@crates_io//:log",
    ],
)
