"""
x-spec - X 语言规格测试运行器
"""

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

package(default_visibility = ["//:internal"])

exports_files(glob(["cases/**/*.toml"]))

rust_binary(
    name = "x_spec",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_spec",
    edition = "2021",
    data = glob(["cases/**/*.toml"]),
    deps = [
        "//compiler/x-lexer",
        "//compiler/x-parser",
        "//compiler/x-interpreter",
        "@crates_io//:toml",
        "@crates_io//:serde",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "x_spec_tests",
    edition = "2021",
    data = glob(["cases/**/*.toml"]),
    deps = [
        ":x_spec",
        "//compiler/x-lexer",
        "//compiler/x-parser",
        "//compiler/x-interpreter",
        "@crates_io//:toml",
        "@crates_io//:serde",
    ],
)
